// Copyright 2021 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.kingdom;

import "wfa/measurement/internal/kingdom/measurement_consumer.proto";

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

// Internal service for persistence of MeasurementConsumer entities.
service MeasurementConsumers {
  rpc CreateMeasurementConsumer(CreateMeasurementConsumerRequest)
      returns (MeasurementConsumer);

  rpc GetMeasurementConsumer(GetMeasurementConsumerRequest)
      returns (MeasurementConsumer);

  rpc AddMeasurementConsumerOwner(AddMeasurementConsumerOwnerRequest)
      returns (MeasurementConsumer) {}

  rpc RemoveMeasurementConsumerOwner(RemoveMeasurementConsumerOwnerRequest)
      returns (MeasurementConsumer) {}
}

message CreateMeasurementConsumerRequest {
  MeasurementConsumer measurement_consumer = 1;
  fixed64 external_account_id = 2;
  bytes measurement_consumer_creation_token_hash = 3;
}

message GetMeasurementConsumerRequest {
  fixed64 external_measurement_consumer_id = 1;
}

message AddMeasurementConsumerOwnerRequest {
  fixed64 external_measurement_consumer_id = 1;
  fixed64 external_account_id = 2;
}

message RemoveMeasurementConsumerOwnerRequest {
  fixed64 external_measurement_consumer_id = 1;
  fixed64 external_account_id = 2;
}
